# signalmesh

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DEV.md  Makefile  README.md  explanation.md
.github/workflows/: apm-release.yml  bootloader-release.yml  ci.yml  release.yml  tools-release.yml
cheby/: README.md  audio_regs.yaml  core_regs.yaml  gen.sh
cmake/: version.cmake  version.h.in
docs/: acm-synth-architecture.md  releasing.md
docs/diagrams/: acm-architecture.dot  apm-control-panel.dot  boot-asset-map.dot  boot-state-machine.dot  control-board-wiring.dot  render.sh
lib/drivers/: Doxyfile
modules/: README.md  foo.sh
modules/aam/: CMakeLists.txt  Makefile
modules/aam/.dep/: board.o.d  bufstreams.o.d  ch_test.o.d  ch_test_printf.o.d  chcond.o.d  chcore.o.d  chcoreasm.o.d  chdebug.o.d  chdelegates.o.d  chdynamic.o.d  chevents.o.d  chfactory.o.d  chinstances.o.d  chmboxes.o.d  chmemchecks.o.d  chmemcore.o.d  chmemheaps.o.d  chmempools.o.d  chmsg.o.d  chmtx.o.d  chobjcaches.o.d  chpipes.o.d  chprintf.o.d  chregistry.o.d  chrfcu.o.d  chscanf.o.d  chschd.o.d  chsem.o.d  chsys.o.d  chthreads.o.d  chtm.o.d  chtrace.o.d  chvt.o.d  crt0_v7m.o.d  crt1.o.d  dac_ex.o.d  hal.o.d  hal_buffered_serial.o.d  hal_buffers.o.d  hal_dac.o.d  (+49 more)
modules/aam/cfg/: chconf.h  mcuconf.h
modules/aam/src/: dac_ex.c  dac_ex2.c  dac_ex3.c  sine.c  voice.c
modules/acm/: Makefile  acm.cst  uart.v  uart_test.v  version.yml
modules/afm/: Makefile  README.md  afm.cst  afm.gprj  blinky.json  blinky.v  clk_div_example.json  clk_div_example.v  lfo.v  pack.fs  pll_example.json  pll_example.v  pnrblinky.json  pnrclk_div_example.json  pnrpll_example.json  pnrsine_wave_gen.json  sine_wave_gen.json  uart_tb.v
modules/afm/mcu/: CMakeLists.txt  README.md
modules/afm/mcu/bsp/: README.md
modules/afm/mcu/bsp/drivers/inc/: GOWIN_M1_can.h  GOWIN_M1_ddr3.h  GOWIN_M1_dualtimer.h  GOWIN_M1_ethernet.h  GOWIN_M1_gpio.h  GOWIN_M1_i2c.h  GOWIN_M1_psram.h  GOWIN_M1_qspi_flash.h  GOWIN_M1_rtc.h  GOWIN_M1_sdcard.h  GOWIN_M1_spi.h  GOWIN_M1_spi_flash.h  GOWIN_M1_trng.h
modules/afm/mcu/bsp/drivers/src/: GOWIN_M1_can.c  GOWIN_M1_ddr3.c  GOWIN_M1_dualtimer.c  GOWIN_M1_ethernet.c  GOWIN_M1_gpio.c  GOWIN_M1_i2c.c  GOWIN_M1_psram.c  GOWIN_M1_qspi_flash.c  GOWIN_M1_rtc.c  GOWIN_M1_sdcard.c  GOWIN_M1_spi.c  GOWIN_M1_spi_flash.c  GOWIN_M1_trng.c
modules/afm/mcu/bsp/startup/: startup_GOWIN_M1.S
modules/afm/mcu/bsp/startup/linker/: GOWIN_M1_flash_burn.ld  GOWIN_M1_flash_xip.ld
modules/afm/mcu/bsp/system/: GOWIN_M1.h  GOWIN_M1_it.c  GOWIN_M1_it.h  system_GOWIN_M1.c  system_GOWIN_M1.h
modules/afm/mcu/cheby/: README.md
modules/afm/mcu/itcm/: CMakeLists.txt  README.md  boot.c
modules/afm/mcu/itcm/mem_files/: itcm0  itcm1  itcm2  itcm3
modules/afm/mcu/itcm/old/: itcm0  itcm1  itcm2  itcm3
modules/afm/mcu/kernel/: ctx_sw.S  kernel.c  kernel.h  pendsv.S
modules/afm/mcu/scripts/: size_summary.sh
modules/afm/mcu/src/: debug.c  debug.h  delay.c  delay.h  gpio.c  gpio.h  hw.c  hw.h  main.c  sys_defs.h
modules/apm/: .gdb_history  CMakeLists.txt  CMakeLists.txt.bak  Makefile  STM32H755xI_M7.ld  sources.txt  version.yml
modules/apm/app/: main.c
modules/apm/bsp/: audio_regs.h  bsp.c  bsp.h  bsp_i2c.c  chconf.h  halconf.h  halconf_community.h  mcuconf.h  portab.c  portab.h  usbh_additional_class_drivers.h
modules/apm/bsp/configs/: bsp_adc_config.c  bsp_adc_config.h  bsp_gpt_config.c  bsp_gpt_config.h  bsp_i2c_config.c  bsp_i2c_config.h  bsp_pins.h  bsp_pwm_config.c  bsp_pwm_config.h  bsp_spi_config.c  bsp_spi_config.h  bsp_spi_config_minimal.c  bsp_uart_config.c  bsp_uart_config.h
modules/apm/bsp/include/: boards.h  bsp_defs.h  bsp_gpt.h  bsp_print.h
modules/apm/bsp/src/: bsp_gpt.c
modules/apm/bsp/utils/: bsp_gpt.c  bsp_gpt.h  bsp_io.c  bsp_io.h  bsp_print.c  bsp_print.h
modules/apm/cfg/: halconf.h  mcuconf.h  portab.c  portab.h
modules/apm/cheby/: audio_regs.h  core_regs.h
modules/apm/drivers/: adc.h  bme280.c  bme280.h  driver_api.h  ina219.c  ina219.h  servo.c  servo.h
modules/apm/src/: adc.c  dma_ex.c  mg996r_servo.c  pot.c  sine.c  voice.c  waveform.c
modules/apm/tests/: bist_24lc256.c  bist_74hc138.c  bist_gm009605.c  bist_gm009605_ramp.c  bist_hd44780_i2c.c  bist_i2c_lb.c  bist_icu.c  bist_ina219_dual.c  bist_lcd2004.c  bist_spi_lb.c  bist_spimux_select.c  bist_w25q64.c  bist_w25q64_dual.c  bist_w25q64_rw.c  dma_ex.c  fmc_audio_test.c  gpio_pin_check.c  midi_usb_driver_test.c  midi_usb_enum_test.c  midi_usb_test.c  pot.c  spi_test1.c  spi_test2.c  spi_test3.c  test_adc.c  test_bme280.c  test_env_autogate.c  test_fmc_core.c  test_fmc_dds_e2e.c  test_fmc_fpga.c  test_fpga_uart.c  test_fw_receiver.c  test_i2c_lb.c  test_i2c_scan.c  test_ina219.c  test_lcd_ui.c  test_midi_synth.c  test_poll_all.c  test_pot_level.c  test_pot_mux.c  (+13 more)
modules/apm/tools/: uart_bench_send.py
modules/bootloader/: CMakeLists.txt  bl_main.c  bl_stage.c  bl_stage.h  bl_update.c  bl_update.h  halconf.h  memmap.c  version.yml
modules/demo_app/: Makefile  demo_app.c  demo_app.elf  demo_app.ld
schematic/: #auto_saved_files#  _autosave-signalmesh.kicad_sch  fp-info-cache  freerouting.dsn  signalmesh.kicad_pcb  signalmesh.kicad_prl  signalmesh.kicad_pro  signalmesh.kicad_sch  temp-freerouting.dsn
schematic/jlcpcb/: project.db
schematic/v2/: #auto_saved_files#  7SDD.kicad_sch  AAM.kicad_sch  AAM_debug.kicad_sch  AAM_midi.kicad_sch  AAM_peripherals.kicad_sch  ACM.kicad_sch  ACM_debug.kicad_sch  ACM_spiflash.kicad_sch  AFFM.kicad_sch  AFFM_filters.kicad_sch  APM.kicad_sch  APM_debug.kicad_sch  APM_midi.kicad_sch  DSM.kicad_sch  DSM_debug.kicad_sch  DSM_media.kicad_sch  DSM_peripherals.kicad_sch  LPFs.kicad_sch  (+17 more)
scratch/: main.c  phase.py  phase_animation.py
toolchain/: chibiOS_common.cmake  chibiOS_rt.cmake  gcc_stm32.cmake  size_diff.sh  stm32h7xx.cmake
tools/: Makefile  build_bsp.py  debugport  debugport.c  fpgaloader.py  fpgapwr.py  fpgaserver.py  gdbserver.py  init_gdbserver.py  mkupdater.cpp  sniffer  sniffer.c
utils/: pressure_conversions.py  temperature_conversions.py
(+259 files in other folders)
